<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip">
  
<TextView  
    android:id="@+id/tloaddb_label"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_gravity="center"
    android:layout_marginBottom="30dip"
    android:layout_marginLeft="70dip"
    android:text="@string/loaddb"
    />
    
 <TableLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:stretchColumns="*">   
 
 <TableRow>
 
 <Button android:id="@+id/usb_label"
         android:text="@string/usb" />

 <Button android:id="@+id/wifi_label"
         android:text="@string/wifi" />

 </TableRow>
</TableLayout>

</LinearLayout>
